Replaced background and added highlighting, redesign

--- a/coursework/index.html
+++ b/coursework/index.html
@@ -8,28 +8,23 @@
 <body>
 	<article>
 
-		<ul> <!-- The 'paper holes' -->
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
+		<!-- use of mark is perfect!!! http://www.w3.org/TR/html-markup/mark.html#mark -->
 
 		<section class="text">
 
-			<h1>The evolution of mobile application design ~ Zac Colley</h1>
+			<time> <?php date('d-m-Y'); ?> 01-01-2013</time>
 
-			<p>This literature review will be discussing the evolution of mobile application design and how application design for mobile devices compares to desktop. It will include the areas of hardware, desktop design, some history of mobile devices and their applications, how iPhones made the web a key role in applications, 3G and WiFi enabling this, the idea of ubiquitous computing and user experience and interfaces. I selected these topics as I felt they would be most influential in the evolution of mobile applications as well as the devices themselves.</p>
+			<p class="name">Zac Colley</p>
+
+			<h1>The evolution of mobile application design</h1>
+
+			<p>This literature review will be discussing the evolution of mobile application design and how application design for mobile devices compares to desktop. It will include the areas of hardware, desktop design, some history of mobile devices and their applications, how iPhones made the web a key role in applications, <em>3G and WiFi</em> enabling this, the idea of <em>ubiquitous computing</em> and user experience and interfaces. I selected these topics as I felt they would be most influential in the evolution of mobile applications as well as the devices themselves.</p>
 
 
-			<p>In the 1980s, Microsoft Windows and Apple Macintosh started using WIMP (windows, icons, menus and pointers). These key elements are still used today on modern operating systems for desktop computing. As Myers, Hudson and Pausch (2000) state "the 70's saw a tremendous amount of experimentation with a variety of input devices and user interface styles, much of the diversity is now gone from user interfaces."</p>
+			<p>In the 1980s, Microsoft Windows and Apple Macintosh started using <em>WIMP</em> (windows, icons, menus and pointers). These key elements are still used today on modern operating systems for desktop computing. As <mark class="ref">Myers, Hudson and Pausch (2000)</mark> state "the 70's saw a tremendous amount of experimentation with a variety of input devices and <em>user interface</em> styles, much of the diversity is now gone from user interfaces."</p>
 
 
-			<p>The WIMP interface idea came around due to the desktop metaphor. Sheets of paper can be represented by documents. This design fueled by metaphors presents problems (Gentner &amp; Nielsen, 1996). One of them being that if you compare your application to a real world item any added functionality may be overlooked by your user. Gentner and Nielsen (1996) uses the example of a typewriter and a word processor. The user may not think to look or use the find and replace commands.</p>
+			<p>The WIMP interface idea came around due to the desktop metaphor. Sheets of paper can be represented by documents. This design fueled by metaphors presents problems <mark class="ref">(Gentner &amp; Nielsen, 1996)</mark>. One of them being that if you compare your application to a real world item any added functionality may be overlooked by your user. <mark class="ref">Gentner and Nielsen (1996)</mark> uses the example of a typewriter and a word processor. The user may not think to look or use the find and replace commands.</p>
 
 
 			<p>Through studies Kaptelinin and Czerwinksi (2007) state the traditional antiquated design for desktop does not support real-life tasks of today such as collaborating, multi-tasking and diverse technologies. With the change of hardware to mobile that can enable multimodality, interacting with not only the touch screen but voice and motion too, mobile devices require different thinking to desktop design with which the standard is keyboard and mouse</p>
