--- a/coursework/index.html
+++ b/coursework/index.html
@@ -6,6 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	
+	<section class="bookmark">
+		<p>Myers, B., Hudson, S. &amp; Paush, R. (2000). Past, Present and Future of User Interface Software Tools. ACM Transactions on Computer-Human Interaction, 7. Retrieved from <a href="#">http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.45.9491</a></p>
+	</section>
+	
 	<article>
 
 		<!-- use of mark is perfect!!! http://www.w3.org/TR/html-markup/mark.html#mark -->
@@ -18,64 +23,73 @@
 
 			<h1>The evolution of mobile application design</h1>
 
-			<p>This literature review will be discussing the evolution of mobile application design and how application design for mobile devices compares to desktop. It will include the areas of hardware, desktop design, some history of mobile devices and their applications, how iPhones made the web a key role in applications, <em>3G and WiFi</em> enabling this, the idea of <em>ubiquitous computing</em> and user experience and interfaces. I selected these topics as I felt they would be most influential in the evolution of mobile applications as well as the devices themselves.</p>
+			<p>This literature review will be discussing the evolution of mobile application design and how application design for mobile devices compares to desktop. It will include the areas of hardware, desktop design, some history of mobile devices and their applications, how iPhones made the web a key role in applications, <strong>3G and WiFi</strong> enabling this, the idea of <strong>ubiquitous computing</strong> and user experience and interfaces. I selected these topics as I felt they would be most influential in the evolution of mobile applications as well as the devices themselves.</p>
 
 
-			<p>In the 1980s, Microsoft Windows and Apple Macintosh started using <em>WIMP</em> (windows, icons, menus and pointers). These key elements are still used today on modern operating systems for desktop computing. As <mark class="ref">Myers, Hudson and Pausch (2000)</mark> state "the 70's saw a tremendous amount of experimentation with a variety of input devices and <em>user interface</em> styles, much of the diversity is now gone from user interfaces."</p>
+			<p>In the 1980s, Microsoft Windows and Apple Macintosh started using <em>WIMP</em> (windows, icons, menus and pointers). These key elements are still used today on modern operating systems for desktop computing. As <mark>Myers, Hudson and Pausch (2000)</mark> state "the 70's saw a tremendous amount of experimentation with a variety of input devices and <strong>user interface</strong> styles, much of the diversity is now gone from user interfaces."</p>
 
 
-			<p>The WIMP interface idea came around due to the desktop metaphor. Sheets of paper can be represented by documents. This design fueled by metaphors presents problems <mark class="ref">(Gentner &amp; Nielsen, 1996)</mark>. One of them being that if you compare your application to a real world item any added functionality may be overlooked by your user. <mark class="ref">Gentner and Nielsen (1996)</mark> uses the example of a typewriter and a word processor. The user may not think to look or use the find and replace commands.</p>
+			<p>The WIMP interface idea came around due to the <strong>desktop metaphor</strong>. Sheets of paper can be represented by documents. This design fueled by metaphors presents problems <mark>(Gentner &amp; Nielsen, 1996)</mark>. One of them being that if you compare your application to a real world item any added functionality may be overlooked by your user. <mark>Gentner and Nielsen (1996)</mark> uses the example of a typewriter and a word processor. The user may not think to look or use the find and replace commands.</p>
 
 
-			<p>Through studies Kaptelinin and Czerwinksi (2007) state the traditional antiquated design for desktop does not support real-life tasks of today such as collaborating, multi-tasking and diverse technologies. With the change of hardware to mobile that can enable multimodality, interacting with not only the touch screen but voice and motion too, mobile devices require different thinking to desktop design with which the standard is keyboard and mouse</p>
+			<p>Through studies <mark>Kaptelinin and Czerwinksi (2007)</mark> state the traditional antiquated design for desktop does not support real-life tasks of today such as collaborating, <strong>multi-tasking</strong> and diverse technologies. With the change of hardware to mobile that can enable <strong>multimodality</strong>, interacting with not only the touch screen but voice and motion too, mobile devices require different thinking to desktop design with which the standard is keyboard and mouse</p>
 
 
-			<p>Speech as an input seems a natural input for a device that often is a telephone. Although it has been difficult to design for as shown (Ballard, 2007) from decades of research failed products. It also can make a user feel a lack of power over the applications if it doesn’t work correctly.</p>
+			<p>Speech as an input seems a natural input for a device that often is a telephone. Although it has been difficult to design for as shown <mark>(Ballard, 2007)</mark> from decades of research failed products. It also can make a user feel a lack of power over the applications if it doesn’t work correctly.</p>
 
 
-			<p>However these devices have a fundamental problem, as found by Dunlop (2001) “attempting to give users access to powerful computing services and resources through small interfaces, which typically have tiny visual displays, poor audio interaction facilities and limited input techniques.” The size of a the devices provide a design problem that a desktop application doesn’t have. Monitors have more space to work with generally but with a mobile device typically handheld in size design changes. Tablet computing has the advantage of a larger screen and so again applications are designed differently for them.</p>
+			<p>However these devices have a fundamental problem, as found by <mark>Dunlop (2001)</mark> “attempting to give users access to powerful computing services and resources through small interfaces, which typically have tiny visual displays, poor audio interaction facilities and limited input techniques.” The size of a the devices provide a design problem that a desktop application doesn’t have. Monitors have more space to work with generally but with a mobile device typically handheld in size design changes. Tablet computing has the advantage of a larger screen and so again applications are designed differently for them.</p>
 
 
-			<p>Personal computers have the goal of a device that can ideally do all tasks while removing simplicity and ease of use as Norman (1999) points out . A mobile device is tailored for more specific roles and can be simpler and easier to use from this originally although as they evolve we see them more closely match desktops in terms of what they can handle. Norman (1999) also sees the promise of new technologies merging communication with computing and that keeping people in touch with one another is powerful.</p>        
+			<p>Personal computers have the goal of a device that can ideally do all tasks while removing simplicity and ease of use as <mark>Norman (1999)</mark> points out . A mobile device is tailored for more specific roles and can be simpler and easier to use from this originally although as they evolve we see them more closely match desktops in terms of what they can handle. <mark>Norman (1999)</mark> also sees the promise of new technologies merging communication with computing and that keeping people in touch with one another is powerful.</p>        
 
 
-			<p>One of the first applications for the mobile phone was short message services or SMS with the first transmission in 1992. SMS was found (Snowden, 2006) to have “mass communication potential”. Mobile phones then allowed communication vocally and through text but they were not used for applications you see in ‘smart phones’ today.</p>
+			<p>One of the first applications for the mobile phone was short message services or SMS with the first transmission in 1992. SMS was found <mark>(Snowden, 2006)</mark> to have “mass communication potential”. Mobile phones then allowed communication vocally and through text but they were not used for applications you see in ‘smart phones’ today.</p>
 
 
-			<p>Two years after the first text message IBM designed a phone by the name ‘Simon’. It was the first so-called ‘smart phone’ and incorporated cards which were it’s applications. Canova in Sager (2012, p3) explains “Here I was, talking to someone with access to my calendar, e-mail, and much more, with only a phone in my hand. For the first time, no computer was needed”.</p>
+			<p>Two years after the first text message IBM designed a phone by the name ‘Simon’. It was the first so-called ‘smart phone’ and incorporated cards which were it’s applications. <mark>Canova in Sager (2012, p3)</mark> explains “Here I was, talking to someone with access to my calendar, e-mail, and much more, with only a phone in my hand. For the first time, no computer was needed”.</p>
 
 
-			<p>In January 2007 the first iPhone was released, 270,000 were sold in the first thirty hours and then selling 2.3 million the fourth quarter of the same year. (West &amp; Mace, 2010) It was shown the ‘killer app’ for mobile devices was the web browser. Apple tried to make their browser adapted from the browser on their computers, Safari with added touchscreen gesture functionality such as pinch to zoom, an example of multimodal input.</p>
+			<p>In January 2007 the first iPhone was released, 270,000 were sold in the first thirty hours and then selling 2.3 million the fourth quarter of the same year. <mark>(West &amp; Mace, 2010)</mark> It was shown the ‘killer app’ for mobile devices was the web browser. Apple tried to make their browser adapted from the browser on their computers, Safari with added touchscreen gesture functionality such as pinch to zoom, an example of multimodal input.</p>
 
 
-			<p>When the iPhone was first launched it was supporting the EDGE 2.5G network, slower than 3G but on Christmas Day of the same year it was found to be the most used mobile web browser by Google. (Helft, 2008)</p>
+			<p>When the iPhone was first launched it was supporting the EDGE 2.5G network, slower than 3G but on Christmas Day of the same year it was found to be the most used mobile web browser by Google. <mark>(Helft, 2008)</mark></p>
 
 
 			<p>Applications taking advantage of the web were starting to be developed but it wasn’t until before the iPhone 3G launching that an application store fueled by developers outside of Apple became available. Web apps at this time for the iPhone depended on 3G and WiFi to be accessible to the user.</p>
 
 
-			<p>The software development kit (SDK) for iPhone allow developers to design applications for the phone. Including an development environment, simulators and also interface builders. (“Develop on your Mac”, n.d) Software named “Google App Inventor” has been developed to let less experienced users in theory develop for mobile devices. This software is for use on the Android operating system software. (Hardesty, 2010)</p>
+			<p>The software development kit (SDK) for iPhone allow developers to design applications for the phone. Including an development environment, simulators and also interface builders. <mark>(“Develop on your Mac”, n.d)</mark> Software named “Google App Inventor” has been developed to let less experienced users in theory develop for mobile devices. This software is for use on the Android operating system software. <mark>(Hardesty, 2010)</mark></p>
 
 
-			<p>Mobile computing is built on the basis of the ability to connect to networks regardless of where the user is (Kalakota, Stallaert &amp; Whinston, 1996). Mobile telephony enables this and has changed mobile devices, adding connectivity almost all the time wirelessly. Mainly wireless mobile services have been used for voice telephony but more recently they have been used for data services which is a need for users. 3G technologies offer higher data rates which can support web applications, with the transition to the newer 4G technologies we can see higher bandwidth for more data heavy applications. (Lehr &amp; McKnight, 2003)</p>
+			<p>Mobile computing is built on the basis of the ability to connect to networks regardless of where the user is <mark>(Kalakota, Stallaert &amp; Whinston, 1996)</mark>. Mobile telephony enables this and has changed mobile devices, adding connectivity almost all the time wirelessly. Mainly wireless mobile services have been used for voice telephony but more recently they have been used for data services which is a need for users. 3G technologies offer higher data rates which can support web applications, with the transition to the newer 4G technologies we can see higher bandwidth for more data heavy applications. <mark>(Lehr &amp; McKnight, 2003)</mark></p>
 
 
-			<p>With mobile devices considerations for the context in which they are used have to be taken. An application cannot be assumed to be in one place as with a desktop. Hoober and Berkman (2011) state “Desktops (and some other devices) can suck people in, so you can go ahead and issue alerts that blink the corner...” and point out mobiles are glanced at in between other tasks in our daily life. With mobile applications additional entities and activities can take a user’s attention from the application and device. (Jun Gong &amp; Tarasewich, 2004)</p>
+			<p>With mobile devices considerations for the context in which they are used have to be taken. An application cannot be assumed to be in one place as with a desktop. <mark>Hoober and Berkman (2011)</mark> state “Desktops (and some other devices) can suck people in, so you can go ahead and issue alerts that blink the corner...” and point out mobiles are glanced at in between other tasks in our daily life. With mobile applications additional entities and activities can take a user’s attention from the application and device. <mark>(Jun Gong &amp; Tarasewich, 2004)</mark></p>
 
 
-			<p>York and Pendharkar (2004) show a traditional user interface such that would be on a desktop requires “too many visual and cognitive resources” to be utilised in mobile computing as interacting with a mobile device in this context can be “secondary to the task at hand.”</p>
+			<p><mark>York and Pendharkar (2004)</mark> show a traditional user interface such that would be on a desktop requires “too many visual and cognitive resources” to be utilised in mobile computing as interacting with a mobile device in this context can be “secondary to the task at hand.”</p>
 
 
-			<p>Ballard (2007) finds a user can be involved in many “microcontexts” at the same time. Some of these contexts can be social and so applications should be designed to encourage sociability in person and online too. The design of an application should be dependant these microcontexts (e.g. At dinner, notifications should be intrusive to only the user and not the people with him.)</p>
+			<p><mark>Ballard (2007)</mark> finds a user can be involved in many “microcontexts” at the same time. Some of these contexts can be social and so applications should be designed to encourage sociability in person and online too. The design of an application should be dependant these microcontexts (e.g. At dinner, notifications should be intrusive to only the user and not the people with him.)</p>
 
 
-			<p>The idea of ubiquitous computing (simply ubicomp) which is “the primacy of the physical world and the construction of appropriate tools that enhance our daily activities.” (Wellner, Mackay, &amp; Gold, 1993) can be achieved through mobile devices in one form.</p>
+			<p>The idea of ubiquitous computing (simply ubicomp) which is “the primacy of the physical world and the construction of appropriate tools that enhance our daily activities.” <mark>(Wellner, Mackay, &amp; Gold, 1993)</mark> can be achieved through mobile devices in one form.</p>
 
 
-			<p>Some (Greenhalgh et al., 2007) argue that the reason mobile devices (specifically mobile phones) and their applications can achieve ubicomp ideals is due to the ubiquitous nature of them around the world. A example given is an application that is used to augment a card-playing game using the interface for a “mixed-reality” gaming experience.</p>
+			<p>Some <mark>(Greenhalgh <em>et al.</em>, 2007)</mark> argue that the reason mobile devices (specifically mobile phones) and their applications can achieve ubicomp ideals is due to the ubiquitous nature of them around the world. A example given is an application that is used to augment a card-playing game using the interface for a “mixed-reality” gaming experience.</p>
 
 
-			<p>However Karapanos et al (2009) found that with an iPhone aesthetics and novel interaction style had a small part in proving “positive pro-longed experiences” but also found that users grew an emotional attachment to the device over a period of time as they used it in their daily lives.</p>
+			<p>However <mark>Karapanos <em>et al.</em> (2009)</mark> found that with an iPhone aesthetics and novel interaction style had a small part in proving “positive pro-longed experiences” but also found that users grew an emotional attachment to the device over a period of time as they used it in their daily lives.</p>
+
+			<p>The literature stated agrees with each other generally and overlaps in ways, as technologies evolve so does the applications and how they should be designed. The desktop application design does not work for mobile applications, it does not handle portability or the input for mobile devices into account. Mobile devices are relatively new and have be propelled by mobile phones and mobile wireless technologies. Ubiquitous computing can be achieved with mobile computing and applications can be seamless with day-to-day tasks.</p>			
+
+			<aside class="references">
+				<h2>References:</h2>
+			<ul>
+				<li>Myers, B., Hudson, S. &amp; Paush, R. (2000). <em>Past, Present and Future of User Interface Software Tools.</em> ACM Transactions on Computer-Human Interaction, 7. Retrieved from <a href="http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.45.9491">http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.45.9491</a></li>
+			</ul>
+			</aside>
 
 		</section>
 
