--- a/coursework/index.html
+++ b/coursework/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>WEBF1 C/W - Literature Review</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="js/jquery.js" type="text/javascript"></script>  <!-- jQuery! :D -->
+	<script src="js/scripts.js" type="text/javascript"></script> <!-- My scripts -->
 </head>
 <body>
 	
@@ -17,7 +19,7 @@
 
 		<section class="text">
 
-			<time> <?php date('d-m-Y'); ?> 01-01-2013</time>
+			<time>1-1-2013</time>
 
 			<p class="name">Zac Colley</p>
 
