Added two new tiles and tweaked worklog
Worklog tile
Video tile
Added video
Capitalised title on worklog...

--- a/webf1/worklog/html/header.html
+++ b/webf1/worklog/html/header.html
@@ -3,7 +3,7 @@
 	<head>	
 
 		<meta charset="UTF-8">
-		<title>Zac's WebF1 Worklog</title>
+		<title>Zac's WEBF1 Worklog</title>
 		<link rel="shortcut icon" href="img/green.ico" />
 		<link rel=stylesheet href="css/styles.css" type="text/css"> <!-- Stylesheet -->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> <!-- jQuery -->
