CV notepad button functionality and general tweaks

--- a/webf1/worklog/head.html
+++ b/webf1/worklog/head.html
@@ -1,7 +1,7 @@
 	<article id="wrapper">
 
 			<section class="head">
-				<a href="#"><h1>My Worklog</h1></a>
+				<h1>My Worklog</h1>
 			</section>
 
 			<nav>
