--- a/year2/webf2/logbook1/index.html
+++ b/year2/webf2/logbook1/index.html
@@ -7,51 +7,64 @@
 </head>
 
 <body>
-	<nav>
-		<h1>Find your way ...</h1>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="index.html">a page</a></li>
-			<li><a href="index.html">another page</a></li>
-			<li><a href="index.html">and another</a></li>
-		</ul>
-	</nav>
 
-	<div id="content">
-		<h1>All things Music</h1>
+	<header>
+		<h1>2-column simple layout</h1>
+	</header>
 
-		<p>Place your intro content here.</p>
+	<main>
 
-		<ul>
-			<li><a href="index.html">Home</a></li>
+		<nav>
+			<h1>Find your way ...</h1>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="index.html">a page</a></li>
+				<li><a href="index.html">another page</a></li>
+				<li><a href="index.html">and another</a></li>
+			</ul>
+		</nav>
 
-			<li><a href="index.html">a page</a></li>
+		<section class="content">
 
-			<li><a href="index.html">another page</a></li>
+			<h1>All things Music</h1>
 
-			<li><a href="index.html">and another</a></li>
-		</ul>
+			<p>Place your intro content here.</p>
 
-		<h2>Wild Man &#8211; lyrics - Kate Bush</h2>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="index.html">a page</a></li>
+				<li><a href="index.html">another page</a></li>
+				<li><a href="index.html">and another</a></li>
+			</ul>
 
-		<p>They call you an animal, the Kangchenjunga Demon, Wild Man, Metoh-Kangmi. Lying in
-		my tent, I can hear your cry echoing round the mountainside. You sound lonely. While
-		crossing the Lhakpa-La something jumped down from the rocks. In the remote Garo Hills
-		by Dipu Marak we found footprints in the snow.</p>
+			<h2>Wild Man &#8211; lyrics - Kate Bush</h2>
 
-		<p>The schoolmaster of Darjeeling said he saw you by the Tengboche Monastery. You
-		were playing in the snow. You were banging on the doors. You got up on the roof, Roof
-		of the World. You were pulling up the rhodedendrons. Loping down the mountain. They
-		want to know you. They will hunt you down, then they will kill you. Run away, run
-		away, run away... While crossing the Lhakpa-La something jumped down from the rocks.
-		In the remote Garo Hills by Dipu Marak we found footprints in the snow. We found your
-		footprints in the snow. We brushed them all away... From the Sherpas of Annapurna to
-		the Rinpoche of Qinghai. Shepherds from Mount Kailash to Himachal Pradesh found
-		footprints in the snow.</p>
+			<p>They call you an animal, the Kangchenjunga Demon, Wild Man, Metoh-Kangmi. Lying in
+			my tent, I can hear your cry echoing round the mountainside. You sound lonely. While
+			crossing the Lhakpa-La something jumped down from the rocks. In the remote Garo Hills
+			by Dipu Marak we found footprints in the snow.</p>
 
-		<p>You&#8217;re not a langur monkey nor a big brown bear &#8211; You&#8217;re the
-		Wild Man. They say they saw you drowned near the Rongbuk Glacier. They want to hunt
-		you down. You&#8217;re not an animal. The Lamas say you&#8217;re not an animal.</p>
-	</div>
+			<p>The schoolmaster of Darjeeling said he saw you by the Tengboche Monastery. You
+			were playing in the snow. You were banging on the doors. You got up on the roof, Roof
+			of the World. You were pulling up the rhodedendrons. Loping down the mountain. They
+			want to know you. They will hunt you down, then they will kill you. Run away, run
+			away, run away... While crossing the Lhakpa-La something jumped down from the rocks.
+			In the remote Garo Hills by Dipu Marak we found footprints in the snow. We found your
+			footprints in the snow. We brushed them all away... From the Sherpas of Annapurna to
+			the Rinpoche of Qinghai. Shepherds from Mount Kailash to Himachal Pradesh found
+			footprints in the snow.</p>
+
+			<p>You&#8217;re not a langur monkey nor a big brown bear &#8211; You&#8217;re the
+			Wild Man. They say they saw you drowned near the Rongbuk Glacier. They want to hunt
+			you down. You&#8217;re not an animal. The Lamas say you&#8217;re not an animal.</p>
+
+		</section>
+	
+	</main>
+
+	<footer>
+		<p>This is an example of a 2 column layout.</p>
+	</footer>
+
 </body>
 </html>
