webscrp - worksheet 1 exercise 1e

--- a/year2/webscrp/ws1e.html
+++ b/year2/webscrp/ws1e.html
@@ -12,6 +12,15 @@
 	<textarea rows="5" cols="60" name="echo1">intial text</textarea>
 	Male? <input type="radio" value="m" name="echo2" checked>
 	Female? <input type="radio" value="f" name="echo2">
+	Hair colour?
+	<select size="3" name="echo3">
+		<option selected>blonde</option>
+		<option>red</option>
+		<option>brunette</option>
+		<option>black</option>
+		<option>grey</option>
+		<option>white</option>
+	</select>
 	<input type="submit" value="send the text field">
 	<input type="reset" value="try again">	
 </form>
