--- a/year2/webscrp/ws1e.html
+++ b/year2/webscrp/ws1e.html
@@ -1,10 +1,10 @@
 <html>
-<head><title>WEBSCRP exercise 1c - input textfield</title></head>
+<head><title>WEBSCRP exercise 1e</title></head>
 
 <body bgcolor="#ffdd99">
 <font face=arial size=2 color="#880088">
 
-<h2>WEBSCRP exercise 1c - input textfield</h2>
+<h2>WEBSCRP exercise 1e</h2>
 
 <form method="post"
 	action="http://lesterk.myweb.port.ac.uk/php/EGs/echoes.php">
