--- a/year2/webscrp/ws1f.html
+++ b/year2/webscrp/ws1f.html
@@ -1,10 +1,10 @@
 <html>
-<head><title>WEBSCRP exercise 1d</title></head>
+<head><title>WEBSCRP exercise 1f</title></head>
 
 <body bgcolor="#ffdd99">
 <font face=arial size=2 color="#880088">
 
-<h2>WEBSCRP exercise 1d</h2>
+<h2>WEBSCRP exercise 1f</h2>
 
 <form method="post"
 	action="http://lesterk.myweb.port.ac.uk/php/EGs/echoes.php">
@@ -12,6 +12,16 @@
 	<textarea rows="5" cols="60" name="echo1">intial text</textarea>
 	Male? <input type="radio" value="m" name="echo2" checked>
 	Female? <input type="radio" value="f" name="echo2">
+	Hair colour?
+	<select size="3" name="echo3">
+		<option selected>blonde</option>
+		<option>red</option>
+		<option>brunette</option>
+		<option>black</option>
+		<option>grey</option>
+		<option>white</option>
+	</select>
+	Bald? <input type="checkbox" value="bald" name="echo4">
 	<input type="submit" value="send the text field">
 	<input type="reset" value="try again">	
 </form>
