--- a/4th/agav/taskone/index.html
+++ b/4th/agav/taskone/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>agav WebGL</title>
+  <title>AGAV WebGL</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <h1>agax WebGL</h1>
-  
+  <h1>AGAV WebGL</h1>
+
   <canvas class="canvas" width="500" height="500">
     Oops, your browser doesn't support canvas. Sorry! :¬(
   </canvas>
