--- a/4th/agav/taskone/index.html
+++ b/4th/agav/taskone/index.html
@@ -13,6 +13,8 @@
   </canvas>
 
   <script src="js/webgl-debug.js" type="text/javascript"></script>
+  <script src="js/webgl-utils.js" type="text/javascript"></script>
+  <script src="js/gl-matrix.js" type="text/javascript"></script>
   <script src="js/scripts.js" type="text/javascript"></script>
 </body>
 </html>
