--- a/4th/agav/taskone/index.html
+++ b/4th/agav/taskone/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>AGAV WebGL</h1>
+  <div class="fps-counter"> FPS: <span class="fps">--</span></div>
 
   <canvas class="canvas" width="500" height="500">
     Oops, your browser doesn't support canvas. Sorry! :¬(
