agav submission, closes #23 and #24

--- a/4th/agav/taskone/index.html
+++ b/4th/agav/taskone/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- tested in google chrome version 49 -->
   <meta charset="UTF-8">
   <title>AGAV WebGL</title>
   <link rel="stylesheet" href="css/styles.css" />
@@ -9,7 +10,7 @@
   <main>
     <div class="info">
       <div class="info__row">FPS: <span class="fps">##</span></div>
-      
+
       <div class="info__heading">Satellite controls</div>
       <div class="info__row"><span class="info__key">←</span> Speed down</div>
       <div class="info__row"><span class="info__key">→</span> Speed up</div>
