--- a/4th/edcom/index.html
+++ b/4th/edcom/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
   <div id="container"></div>
+  <div class="menu">
+
+    <button class="start-button">Start</button>
+  </div>
+
 
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r74/three.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r74/three.min.js"></script>
