Added information to splash screen

--- a/4th/edcom/index.html
+++ b/4th/edcom/index.html
@@ -9,8 +9,20 @@
 <body>
   <div id="container"></div>
   <div class="menu">
+    <section>
+      <h1>Spanish VR Vocabulary Learning Tool</h1>
 
-    <button class="start-button">Start</button>
+      <p>It is assumed you have basic Spanish vocabulary knowledge.</p>
+
+      <p>Images with descriptions underneath will be shown and you must say the Spanish word.</p>
+
+      <p>You will need a <a href="https://www.amazon.co.uk/s/field-keywords=google+cardboard">Google Cardboard</a> headset for this demo.</p>
+    </section>
+    <section>
+      <button class="start-button">Start</button>
+
+      <img src="images/cardboard.gif" alt="A illustration of the Google Cardboard headset" />
+    </section>
   </div>
 
 
